--- a/Test.Test/packages.config
+++ b/Test.Test/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="4.6.1" targetFramework="net45" />
   <package id="Castle.Core" version="4.1.1" targetFramework="net45" />
   <package id="Moq" version="4.7.99" targetFramework="net45" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
